# Shelfino_ROS2

./: .gitignore  .gitmodules  README.md  action__factory_8hpp_source.html  annotated.html  annotated_dup.js  bridge_8hpp_source.html  builtin__interfaces__factories_8hpp_source.html  classCMDPublisher-members.html  classCMDPublisher.html  classCMDPublisher.js  classHardwareGlobalInterface-members.html  classHardwareGlobalInterface.html  classHardwareGlobalInterface.js  classJoystick-members.html  classJoystick.html  classJoystick.js  classJoystickEvent-members.html  classJoystickEvent.html  classJoystickEvent.js  classMinimalPublisher-members.html  classMinimalPublisher.html  classPathPublisher-members.html  classPathPublisher.html  classShelfinoHWNode-members.html  classShelfinoHWNode.html  classShelfinoHWNode.js  classes.html  classros1__bridge_1_1ActionFactoryInterface-members.html  classros1__bridge_1_1ActionFactoryInterface.html  classros1__bridge_1_1ActionFactory__1__2-members.html  classros1__bridge_1_1ActionFactory__1__2.html  classros1__bridge_1_1ActionFactory__1__2.js  classros1__bridge_1_1ActionFactory__1__2_1_1GoalHandler-members.html  classros1__bridge_1_1ActionFactory__1__2_1_1GoalHandler.html  classros1__bridge_1_1ActionFactory__2__1-members.html  classros1__bridge_1_1ActionFactory__2__1.html  classros1__bridge_1_1ActionFactory__2__1.js  classros1__bridge_1_1ActionFactory__2__1_1_1GoalHandler-members.html  classros1__bridge_1_1ActionFactory__2__1_1_1GoalHandler.html  (+122 more)
evader/: CMakeLists.txt  Dockerfile  entrypoint.sh  package.xml
evader/include/evader/: evader.hpp
evader/src/: evader.cpp
follow_path/: CMakeLists.txt  package.xml
follow_path/src/: follow_path.cpp
graph_msgs/: CMakeLists.txt  package.xml
hw_rplidar_reader/: CMakeLists.txt
hw_rplidar_reader/Qt/RpLidarReader/: RpLidarReader.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  painterlidar.cpp  painterlidar.h
hw_rplidar_reader/include/zmq_layer/: Requester.hpp  RequesterSimple.hpp  Subscriber.hpp
hw_rplidar_reader/source/: main.cpp
hw_rplidar_reader/source/zmq_layer/: Requester.cpp  RequesterSimple.cpp  Subscriber.cpp
map_pkg/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
map_pkg/config/: map_config.yaml  map_config_test.yaml
map_pkg/config/demos/evacuation/: evacuation1.yaml  evacuation2.yaml  evacuation3.yaml  evacuation4.yaml
map_pkg/include/map_pkg/: obstacle_struct.hpp  spawn_model.hpp  utilities.hpp
map_pkg/launch/: map_env.launch.py  send_initialpose.launch.py  send_initialpose.launch.py_old  spawn_map.launch.py
map_pkg/launch/mapscripts/: geo_utility.py  spawn_borders.py  spawn_gates.py  spawn_obstacles.py  spawn_utility_.py
map_pkg/models/box/: model.sdf
map_pkg/models/cylinder/: model.config  model.sdf
map_pkg/models/gate/: model.sdf
map_pkg/models/victim/: model.config  model.sdf
map_pkg/scripts/: create_map_pgm.py  generate_config_file.py  geo_utility.py
map_pkg/src/: listen_initpose.cpp  orchestrator.cpp  send_borders.cpp  send_gates.cpp  send_initialpose.cpp  send_initialposes.cpp  send_obstacles.cpp  send_timeout.cpp  send_victims.cpp  spawn_model.cpp  utilities.cpp
map_pkg/test/: utilities_test.cpp
projects/: CMakeLists.txt  README.md  package.xml
projects/launch/: evacuation.launch.py  evader.launch.py  victims.launch.py
sapf/: CMakeLists.txt  package.xml
sapf/launch/: sapf.launch.py
shelfino_description/: CMakeLists.txt  package.xml
shelfino_description/launch/: rsp.launch.py  rviz.launch.py
shelfino_description/models/: shelfino_v1.xacro
shelfino_description/models/lidar2d/: model.config  model.sdf
shelfino_description/models/shelfino/: model.sdf.xacro  model.urdf.xacro
shelfino_description/models/shelfino_v1/: gazebo_classic_controls.xacro  lidar.xacro  materials.xacro  shelfino_body.xacro  wheels.xacro  xmas_hat.xacro
shelfino_description/models/xmas_hat/: model.config  model.sdf
shelfino_description/rviz/: shelfino.rviz
shelfino_gazebo/: CMakeLists.txt  package.xml
shelfino_gazebo/launch/: multi_shelfino.launch.py  shelfino.launch.py
shelfino_gazebo/src/: destroy_shelfino.cpp
shelfino_gazebo/worlds/: empty.world  hexagon.world  labIoTOT.world
shelfino_gazebo/worlds/hexagon_new/: model.config  model.sdf
shelfino_gazebo/worlds/hexagon_world/: model-1_4.sdf  model.config  model.sdf
shelfino_gazebo/worlds/rectangle_world/: model.config  model.sdf
shelfino_gazebo_ros1/: CMakeLists.txt  package.xml
shelfino_gazebo_ros1/launch/: shelfino.launch
shelfino_gazebo_ros1/models/: model.sdf
shelfino_gazebo_ros1/models/povo/: model.sdf
shelfino_gazebo_ros1/rviz/: shelfino.rviz
shelfino_gazebo_ros1/worlds/: empty.world  povo.world
shelfino_navigation/: CMakeLists.txt  package.xml
shelfino_navigation/config/: shelfino.lua  shelfino.yaml
shelfino_navigation/launch/: multi_shelfino_nav.launch.py  shelfino2_slam.launch.py  shelfino_nav.launch.py
shelfino_navigation/maps/: demo.pgm  demo.yaml  dynamic_map.yaml  hexagon.pgm  hexagon.yaml  lab.pgm  lab.yaml  lab1.pgm  lab1.yaml  test_obstacles.pgm  test_obstacles.yaml  ufficio.pgm  ufficio.yaml  ufficio1.pgm  ufficio1.yaml  ufficio2.pgm  ufficio2.yaml  ufficio3.pgm  ufficio3.yaml
shelfino_navigation/rviz/: shelfino2_slam.rviz  shelfino_nav.backup.rviz  shelfino_nav.rviz  shelfino_nav_backup.rviz
shelfino_node/: CMakeLists.txt  package.xml
shelfino_node/include/: Publisher.hpp  Replier.hpp  RequesterSimple.hpp  Subscriber.hpp  hardwareglobalinterface.h  hardwareparameters.h  personitem.h  robotstatus.h  shelfino_hw_publisher.hpp  single_thread.hpp  utils.hpp
shelfino_node/launch/: bringup.launch.py
shelfino_node/src/: Publisher.cpp  Replier.cpp  Subscriber.cpp  changing.cpp  hardwareglobalinterface.cpp  shelfino_hw_publisher.cpp
shelfino_planning/: CMakeLists.txt  package.xml
shelfino_planning/include/shelfino_planning/: mapinfo.hpp
shelfino_planning/src/: mapinfo.cpp  shelfino_dates.cpp
shelfino_planning/src/prm/: prm_algorithm.cpp  samples_marker.cpp
shelfino_planning/src/py_code/: creation_of_sample.py
(+147 files in other folders)
