<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evader</name>
  <version>1.0.0</version>
  <description>Package for the evader</description>
  <maintainer email="enrico.saccon@unitn.it">placido</maintainer>
  <maintainer email="placido.falqueto@unitn.it">placido</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <!-- <depend>mpdp_msgs</depend> -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- <depend>tf2_ros</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
