<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>projects</name>
  <version>1.0.0</version>
  <description>
    Package containing the launch files for the different tasks:
    - Multi-agent path finding: mapf.launch.py 
    - Victims rescue: victims.launch.py 
    - Purseur evader: pv.launch.py 
  </description>
  <maintainer email="enrico.saccon@unitn.it">enrico</maintainer>
  <maintainer email="placido.falqueto@unitn.it">placido</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>shelfino_gazebo</depend>
  <depend>shelfino_description</depend>
  <depend>shelfino_navigation</depend>
  <!-- <depend>evader</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
