<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sapf</name>
  <version>1.0.0</version>
  <description>Project task to exit the map as fast as possible</description>
  <maintainer email="enrico.saccon@unitn.it">enrico</maintainer>
  <license>Apache</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>shelfino_gazebo</depend>
  <depend>shelfino_description</depend>
  <depend>shelfino_navigation</depend>
  <depend>map_pkg</depend>
  <depend>dubins_planner</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
